--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,11 @@ main:
   # - title: "Blog Posts"
   #   url: /year-archive/
     
-  # - title: "CV"
-  #   url: /cv/
+  - title: "Flowers"
+    url: /flowers/
+  
+  - title: "Baskets"
+    url: /baskets/
     
   # - title: "Guide"
   #   url: /markdown/
