--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Peony Pride Alaska"
-  avatar           : images/profile_pic.jpg
+  avatar           : profile_pic.jpg
   bio              : "Flower shop"
   location         : "Matanuska Valley, Alaska"
   employer         :
