--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Peony Pride Alaska"
   avatar           : flower_3.jpg
-  bio              : "Flower shop"
+  bio              : "Flower farm"
   location         : "Matanuska Valley, Alaska"
   employer         :
   pubmed           : 
