--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 locale                   : "en-US"
 title                    : "Peony Pride Alaska"
 title_separator          : "-"
-name                     : &name "Peony Pride Alaska"
-description              : &description "Flower shop"
+name                     : "Peony Pride Alaska"
+description              : "Flower shop"
 url                      : https://ginalea.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "GinaLea/ginalea.github.io"
